--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="sitx-header">
+        <div class="container sitx-header__container">
+            <div class="sitx-header__img">
+                <img src="./img/logo.svg" alt="logo">
+            </div>
+            <nav>
+                <ul class="sitx-header__inner">
+                    <li class="sitx-header__link">
+                        <a class="sitx-header__link-link" href="#">HOME</a>
+                    </li>
+                    <li class="sitx-header__link">
+                        <a class="sitx-header__link-link" href="#">ABOUT US</a>
+                    </li>
+                    <li class="sitx-header__link">
+                        <a class="sitx-header__link-link" href="#">Create your plan</a>
+                    </li>
+                </ul>
+                <button class="sitx-header__menu"></button>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
