--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
+
 <body>
     <header class="sitx-header">
         <div class="container sitx-header__container">
@@ -29,5 +31,17 @@
             </nav>
         </div>
     </header>
+
+    <main class="sitx-main">
+        <section class="hero">
+            <div class="hero__itim">
+                <h1 class="hero__inner">About Us</h1>
+                <p class="hero__taxt">Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of coffee from
+                    around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in
+                    every shipment.</p>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
