--- a/index.html
+++ b/index.html
@@ -34,12 +34,44 @@
 
     <main class="sitx-main">
         <section class="hero">
-            <div class="hero__itim">
-                <h1 class="hero__inner">About Us</h1>
-                <p class="hero__taxt">Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of coffee from
-                    around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in
-                    every shipment.</p>
+            <div class="container">
+                <div class="hero__itim">
+                    <h1 class="hero__inner">About Us</h1>
+                    <p class="hero__taxt">Coffeeroasters began its journey of exotic discovery in 1999, highlighting
+                        stories of coffee from
+                        around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in
+                        every shipment.</p>
+                </div>
             </div>
+        </section>
+
+        <section class="our">
+            <div class="container our__container">
+                <div class="our__img">
+                    <img class=" .our__img " src="./img/Bitmap.png" alt="Bitmap">
+                 
+                </div>
+                <div>
+                    <img class="our__img2" src="./img/Bitmap2.png" alt="Bitmap2">
+                </div>
+                <div class="our__item">
+                    <h2 class="our__inner">Our commitment</h2>
+                    <p class="our__taxt">We’re built on a simple mission and a commitment to doing good along the way. We want to make it easy for you to discover and brew the world’s best coffee at home. It all starts at the source. To locate the specific lots we want to purchase, we travel nearly 60 days a year trying to understand the challenges and opportunities in each of these places. We collaborate with exceptional coffee growers and empower a global community of farmers through with well above fair-trade benchmarks. We also offer training, support farm community initiatives, and invest in coffee plant science. Curating only the finest blends, we roast each lot to highlight tasting profiles distinctive to their native growing region.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="quality">
+            <div class="container quality__container">
+                <div class="quality__itme">
+                    <h2 class="quality__inner">Uncompromising quality</h2>
+                    <p class="quality__taxt">Although we work with growers who pay close attention to all stages of harvest and processing, we employ, on our end, a rigorous quality control program to avoid over-roasting or baking the coffee dry. Every bag of coffee is tagged with a roast date and batch number. Our goal is to roast consistent, user-friendly coffee, so that brewing is easy and enjoyable.</p>
+                </div>
+                <div class="quality__inner-img">
+                    <img class="quality__img" src="./img/quality.png" alt="img">
+                </div>
+            </div>
+            
         </section>
     </main>
 </body>
