--- a/index.html
+++ b/index.html
@@ -49,31 +49,115 @@
             <div class="container our__container">
                 <div class="our__img">
                     <img class=" .our__img " src="./img/Bitmap.png" alt="Bitmap">
-                 
+
                 </div>
                 <div>
                     <img class="our__img2" src="./img/Bitmap2.png" alt="Bitmap2">
                 </div>
                 <div class="our__item">
                     <h2 class="our__inner">Our commitment</h2>
-                    <p class="our__taxt">We’re built on a simple mission and a commitment to doing good along the way. We want to make it easy for you to discover and brew the world’s best coffee at home. It all starts at the source. To locate the specific lots we want to purchase, we travel nearly 60 days a year trying to understand the challenges and opportunities in each of these places. We collaborate with exceptional coffee growers and empower a global community of farmers through with well above fair-trade benchmarks. We also offer training, support farm community initiatives, and invest in coffee plant science. Curating only the finest blends, we roast each lot to highlight tasting profiles distinctive to their native growing region.</p>
+                    <p class="our__taxt">We’re built on a simple mission and a commitment to doing good along the way.
+                        We want to make it easy for you to discover and brew the world’s best coffee at home. It all
+                        starts at the source. To locate the specific lots we want to purchase, we travel nearly 60 days
+                        a year trying to understand the challenges and opportunities in each of these places. We
+                        collaborate with exceptional coffee growers and empower a global community of farmers through
+                        with well above fair-trade benchmarks. We also offer training, support farm community
+                        initiatives, and invest in coffee plant science. Curating only the finest blends, we roast each
+                        lot to highlight tasting profiles distinctive to their native growing region.</p>
+                </div>
+            </div>
+        </section>
+        <section class="qualit">
+            <div class="container qualit__container">
+                <div class="qualit__felx">
+                    <div class="qualit__item">
+                        <h2 class="quality__inner">Uncompromising quality</h2>
+                        <p class="qualit__taxt">Although we work with growers who pay close attention to all stages of
+                            harvest and processing, we employ, on our end, a rigorous quality control program to avoid
+                            over-roasting or baking the coffee dry. Every bag of coffee is tagged with a roast date and
+                            batch number. Our goal is to roast consistent, user-friendly coffee, so that brewing is easy
+                            and enjoyable.</p>
+                    </div>
+                    <div class="qualit__img">
+                        <img src="./img/quality.png" alt="img">
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="quality">
-            <div class="container quality__container">
-                <div class="quality__itme">
-                    <h2 class="quality__inner">Uncompromising quality</h2>
-                    <p class="quality__taxt">Although we work with growers who pay close attention to all stages of harvest and processing, we employ, on our end, a rigorous quality control program to avoid over-roasting or baking the coffee dry. Every bag of coffee is tagged with a roast date and batch number. Our goal is to roast consistent, user-friendly coffee, so that brewing is easy and enjoyable.</p>
-                </div>
-                <div class="quality__inner-img">
-                    <img class="quality__img" src="./img/quality.png" alt="img">
-                </div>
+
+        <section class="unite">
+            <div class="container unite__container">
+                <h2 class="unite__inner">Our headquarters</h2>
+                <ul class="unite__item">
+                    <li class="unite__hero">
+                        <img class="unite__imge" src="./img/Shape.png" alt="Shape">
+                        <h3 class="unite__btm">United Kingdom</h3>
+                        <p class="unite__taxt">
+                            68 Asfordby Rd
+                            <br>
+                            Alcaston
+                            <br>
+                            SY6 1YA
+                            <br>
+                            +44 1241 918425
+                        </p>
+                    </li>
+
+                    <li class="unite__hero">
+                        <img class="unite__imge" src="./img/shape2.svg" alt="Shape">
+                        <h3 class="unite__btm">Canada</h3>
+                        <p class="unite__taxt">
+                            1528  Eglinton Avenue
+                            <br>
+                            Toronto
+                            <br>
+                            Ontario M4P 1A6 <br>
+                            +1 416 485 2997 <br>
+                        </p>
+                    </li>
+
+                    <li class="unite__hero">
+                        <img class="unite__imge" src="./img/Shape3.png" alt="Shape">
+                        <h3 class="unite__btm">Australia</h3>
+                        <p class="unite__taxt">
+                            36 Swanston Street <br>
+                            Kewell <br>
+                            Victoria <br>
+                            +61 4 9928 3629 <br>
+                        </p>
+                    </li>
+
+                </ul>
             </div>
-            
         </section>
+
     </main>
+
+    <footer class="sitx-footer">
+        <div class="container sitx-footer__container">
+            <div class="sitx-footer__inner">
+                <img class="sitx-footer__img" src="./img/imgje.svg" alt="img">
+            </div>
+            <ul class="sitx-footer__sitx-link">
+                <li class="sitx-footer__link"><a href="#">HOME</a></li>
+                <li class="sitx-footer__link"><a href="#">ABOUT US</a></li>
+                <li class="sitx-footer__link"><a href="#">Create your plan</a></li>
+            </ul>
+
+            <div class="footer__ikonca">
+                <a href="#">
+                    <img class="foont__imge" src="./img/Shape3.svg" alt="Shape1">
+                </a>
+                <a href="#">
+                    <img class="foont__imge" src="./img/Path.svg" alt="shape2">
+                </a>
+                <a href="#">
+                    <img class="foont__imge" src="./img/shape1.svg" alt="shape3">
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
